fixing styles of searchbar and filter buttons, this style is temporary while I fix the view on mobile according to buttons and searchbar pt2

--- a/worldsthenics/worldsthenics.css
+++ b/worldsthenics/worldsthenics.css
@@ -392,6 +392,13 @@ img{
 
 #contenedor{
   height: 8vh;
+  display: flex;
+  justify-content: center;
+}
+
+.wraper{
+  display: flex;
+  justify-content: center;
 }
 
 .button-value{
